--- a/myssm/pom.xml
+++ b/myssm/pom.xml
@@ -88,11 +88,16 @@
 			<artifactId>mybatis</artifactId>
 			<version>${mybatis.version}</version>
 		</dependency>
-		 <dependency>  
+		<dependency>  
 		    <groupId>org.mybatis</groupId>  
 		    <artifactId>mybatis-spring</artifactId>  
 		    <version>1.2.3</version>  
 		 </dependency>
+		<dependency>
+			<groupId>org.mybatis.caches</groupId>
+			<artifactId>mybatis-ehcache</artifactId>
+			<version>1.0.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mybatis.generator</groupId>
 			<artifactId>mybatis-generator-core</artifactId>
